# electronic_sales

./: .dockerignore  .env.docker.sample  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: network_links.json  product.json
network/: admin.py  filters.py  models.py  paginator.py  permissions.py  urls.py
network/api_views/: network_link.py  product.py
network/locale/ru/LC_MESSAGES/: django.po
network/management/commands/: fixturedata.py
network/migrations/: 0001_initial.py
network/serializers/: network_link.py  product.py  spectacular_serializers.py
users/: api_views.py  models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
